fixed text resizing, fix menu z-index

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ ul {
 }
 
 span.text-content {
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.7);
     padding: 0px 30px 0px 30px;
     color: white;
     cursor: pointer;
@@ -176,11 +176,23 @@ span.text-content {
 
 
 span.text-content span {
-    font-size:1vw;
+    font-size:0.8vw;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
+
+span.text-content span h2 {
+    font-size:1.2vw;
+    margin: 15px 0 0 0;
+}
+
+span.text-content span h3 {
+    font-size:1vw;
+    margin: 5px 0 10px 0;
+    padding: 5px;
+}
+
 
 
 
@@ -212,8 +224,9 @@ span.text-content span {
     height: 33vh;
 }
 .col-md-4.five {
-    background-image: url('images/Danny_Patterson_Pres.PNG');
+    background-image: url('images/Danny_Patterson_Pres_2.jpg');
     background-size: 100%;
+    background-position: 0px 30%;
     background-repeat: no-repeat;
     height: 33vh;
 }
@@ -253,6 +266,7 @@ span.text-content span {
     height: 100%;
     background-color: #8dc63f;
     text-align: center;
+    z-index: 5;
 }
 
 .vnavbar a {
